Fixed some spacing

--- a/src/components/pitch/Methodology/Methodology.module.scss
+++ b/src/components/pitch/Methodology/Methodology.module.scss
@@ -43,4 +43,9 @@
   h3 {
     margin-bottom: 24px;
   }
+
+  @include mixins.lg {
+    margin-bottom: 60px;
+    text-align: center;
+  }
 }
